test/compile_errors/err_fstring_spec_precision_on_int.w
//! expect-check-fail: precision requires float or string type
fn main:
    let x = 42
    println(f"{x:.3}")
